@@ -192,7 +192,7 @@ char *hpd_up =
     "  --nowbuffer           Disable write pre-caching (faster but less safe), applies to -r\n"
     "  --memlimit=<bytes>    Maximum file size that can be pre-buffered into memory\n"
     "  --memlimita=<bytes>   Maximum ASCII input data file size (ignored)\n"
-    "  --shmem [--shmdestroy] [--shmdestonexit] [--shmreload]\n"
+    "  --shmem [--shmdestroy] [--shmdestonexit] [--shmreload] [--shmflags <octal-mode>]\n"
     "                          Instead of process memory pages, use the shared memory to buffer log data.\n"
     "                          This is usefull as an inter-process caching mechanism, allowing other glutil\n"
     "                           instances (or other processes) rapid access to the log data, without having to\n"
@@ -201,11 +201,15 @@ char *hpd_up =
     "                           destroys the segment and re-creates it with new size\n"
     "                          Although this applies globally, it should only be used with dump operations (-d,-n,-i,..)\n"
     "                          DO NOT use, unless you know exactly what you are doing\n"
-    "                          --shmdestroy forces the old segment (if any) be destroyed and re-loaded\n"
-    "                          --shmdestonexit destroys used segments before exiting process\n"
-    "                          --shmreload forces existing records (if any) be reloaded, but segment is not destroyed\n"
-    "                           and it's size remains the same (when data log size doesn't match segment size,\n"
-    "                           there will be junk/missing records, depending on input size being higher/lower)\n"
+    "                         --shmdestroy    -  force the old segment (if any) be destroyed and re-loaded\n"
+    "                         --shmdestonexit -  destroy used segments before exiting process\n"
+    "                         --shmreload     -  forces existing records (if any) be reloaded, but segment is not destroyed\n"
+    "                                             and it's size remains the same (when data log size doesn't match segment size,\n"
+    "                                             there will be junk/missing records, depending on input size being higher/lower)\n"
+    "                         --shmcflags <octal-mode>\n"
+    "                                         -  three octal digits, representing an unix permission mask to use when creating\n"
+    "                                            a segment ('man chmod' for more info), default is 400\n"
+    "                         --shmro         -  Attach to the segment in read-only mode\n"
     "  --gz <0-9>            Enable gzip compression when writing data. Applies to any data write operation\n"
     "                          (including writing raw data to stdout), except to dirlog rebuild mode (-r)\n"
     "                          0-9 integers determine the compression level;\n"
