@@ -70,10 +70,14 @@ shmap(key_t ipc, struct shmid_ds *ipcret, size_t size, uint32_t *ret,
       shmid = &i_shmid;
     }
 
+  if (gfl0 & F_OPT_SHMRO)
+    {
+      shmflg |= SHM_RDONLY;
+    }
+
   if (*ret & R_SHMAP_ALREADY_EXISTS)
     {
       ir = 1;
-      //shmflg |= SHM_RDONLY;
     }
   else if ((*shmid = shmget(ipc, size,
   IPC_CREAT | IPC_EXCL | cflags)) == -1)
@@ -93,7 +97,6 @@ shmap(key_t ipc, struct shmid_ds *ipcret, size_t size, uint32_t *ret,
                 }
               return NULL;
             }
-          //shmflg |= SHM_RDONLY;
         }
       else
         {
