@@ -77,6 +77,7 @@
  *   - ~ 'path' and 'dir' couldn't be referenced from per/section 'exec' strings
  *   2.4.13:
  *   - + Global vars can be referenced when regex matching rls strings (precheck) (1)
+ *   - + --shmcflags and --shmro (see --help) (2)
  *
  * v2.3:
  *
